improve contact form

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: default
 title: Contact | Epic Landscape Designs
 ---
+{% include contact-info.html %}
 
 {% include contact-hero.html %}
 {% include contact-form.html %}
