--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 ---
-layout: default
+layout: contact
 title: Contact | Epic Landscape Designs
+scripts:
+- /assets/js/form.js
 ---
-{% include contact-info.html %}
 
-{% include contact-hero.html %}
-{% include contact-form.html %}
-{% include contact-map.html %}
+<div class="contact">
+    {% include contact-hero.html %}
+    {% include contact-form.html %}
+</div>
