--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,12 @@ scripts:
 - /assets/js/form.js
 ---
 
+
+
 <div class="contact">
+    <div class="hero-fern hero-fern--top-right">
+        <img src="/assets/img/fern1.svg" alt="Fern decoration" class="fern-image">
+    </div>
     {% include contact-hero.html %}
     {% include contact-form.html %}
 </div>
