--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,8 @@ scripts:
             <div class="projects-grid__items">
                 {% assign sorted_projects = site.data.projects.projects | sort: 'order' %}
                 {% for project in sorted_projects %}
-                <div class="project-item" data-project="{{ project.title | slugify }}">
+                <div class="project-item" data-project="{{ project.title | slugify }}"
+                    data-project-info='{"title": "{{ project.title | escape }}", "location": "{{ project.location | escape }}", "description": "{{ project.description | escape }}", "images": [{% for image in project.images %}"{{ image.image }}"{% unless forloop.last %},{% endunless %}{% endfor %}]}'>
                     <div class="project-item__image-container">
                         {% if project.images and project.images.size > 0 %}
                         <img src="{{ project.images[0].image }}" alt="{{ project.title }}" class="project-item__image">
@@ -53,13 +54,16 @@ scripts:
             <div class="project-modal__images">
                 <div class="project-modal__image-container">
                     <img src="" alt="" class="project-modal__image" id="modalImage">
-                </div>
-                <div class="project-modal__image-nav">
-                    <button class="project-modal__nav-btn project-modal__nav-btn--prev" id="prevImage">&lt;</button>
+                    <button class="project-modal__side-nav project-modal__side-nav--prev"
+                        id="prevImageSide">&lt;</button>
+                    <button class="project-modal__side-nav project-modal__side-nav--next"
+                        id="nextImageSide">&gt;</button>
                     <div class="project-modal__image-counter">
                         <span id="currentImageIndex">1</span> / <span id="totalImages">1</span>
                     </div>
-                    <button class="project-modal__nav-btn project-modal__nav-btn--next" id="nextImage">&gt;</button>
+                </div>
+                <div class="project-modal__thumbnails" id="modalThumbnails">
+                    <!-- Thumbnails will be populated by JavaScript -->
                 </div>
             </div>
             <div class="project-modal__info">
