--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@ scripts:
 ---
 
 
-
-<div class="contact">
+<div class="bg bg-whitecream">
     <div class="hero-fern hero-fern--top-right">
         <img src="/assets/img/fern1.svg" alt="Fern decoration" class="fern-image">
     </div>
+<div class="contact container">
     {% include contact-hero.html %}
     {% include contact-form.html %}
 </div>
