--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,68 @@ scripts:
 - /assets/js/form.js
 ---
 
+<div class="page bg-pattern--fern">
+    {% include fern-decoration.html %}
 
-<div class="bg bg-whitecream">
-    <div class="hero-fern hero-fern--top-right">
-        <img src="/assets/img/fern1.svg" alt="Fern decoration" class="fern-image">
+    <div class="grid grid--2-columns container">
+        <!-- Contact Header -->
+        <section class="page__header">
+            <div class="container">
+                <h1 class="page__title">{{ site.data.contact-page.title }}</h1>
+                <p class="page__description">{{ site.data.contact-page.description }}</p>
+            </div>
+        </section>
+
+        <!-- Contact Form -->
+        <section class="section bg-section">
+            <div class="container container--narrow">
+                <div class="form-wrapper">
+                    <form name='epiclandscape contact' action="/success" method="POST" netlify class="form"
+                        data-netlify="true">
+                        <div class="form-group">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" id="name" name="name" class="form-input">
+                            <div class="error-message" id="name-error"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email" class="form-label">E-mail Address</label>
+                            <input type="email" id="email" name="email" class="form-input">
+                            <div class="error-message" id="email-error"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone" class="form-label">Phone Number</label>
+                            <input type="tel" id="phone" name="phone" class="form-input">
+                            <div class="error-message" id="phone-error"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="enquiry-type" class="form-label">Enquiry Type</label>
+                            <select id="enquiry-type" name="enquiry-type" class="form-select">
+                                <option value="">Select an option</option>
+                                <option value="new-construction">New Construction</option>
+                                <option value="existing-property">Existing Property</option>
+                                <option value="business-opportunity">Business Opportunity</option>
+                                <option value="other">Other</option>
+                            </select>
+                            <div class="error-message" id="enquiry-type-error"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea id="message" name="message" class="form-textarea" rows="6"
+                                maxlength="2000"></textarea>
+                            <div class="error-message" id="message-error"></div>
+                            <div class="character-count" id="message-character-count">0 / 2000 characters</div>
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="btn">SUBMIT</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </div>
-<div class="contact container">
-    {% include contact-hero.html %}
-    {% include contact-form.html %}
 </div>
