--- a/projects.html
+++ b/projects.html
@@ -22,21 +22,19 @@ scripts:
             <div class="grid grid--auto-fit">
                 {% assign sorted_projects = site.data.projects.projects | sort: 'order' %}
                 {% for project in sorted_projects %}
-                <div class="card" data-project="{{ project.title | slugify }}"
+                <div class="project-item" data-project="{{ project.title | slugify }}"
                     data-project-info='{"title": "{{ project.title | escape }}", "location": "{{ project.location | escape }}", "description": "{{ project.description | escape }}", "images": [{% for image in project.images %}"{{ image.image }}"{% unless forloop.last %},{% endunless %}{% endfor %}]}'>
-                    <div class="card__image-container">
+                    <div class="project-item__image-container">
                         {% if project.images and project.images.size > 0 %}
-                        <img src="{{ project.images[0].image }}" alt="{{ project.title }}" class="card__image">
+                        <img src="{{ project.images[0].image }}" alt="{{ project.title }}" class="project-item__image">
                         {% else %}
-                        <div class="card__placeholder">
+                        <div class="project-item__placeholder">
                             <span>No image available</span>
                         </div>
                         {% endif %}
-                        <div class="card__overlay"></div>
+                        <div class="project-item__overlay"></div>
                     </div>
-                    <div class="card__content">
-                        <h3 class="card__title">{{ project.title }}</h3>
-                    </div>
+                    <div class="project-item__title">{{ project.title }}</div>
                 </div>
                 {% endfor %}
             </div>
