--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ scripts:
     <div class="grid grid--2-columns spacer container">
         <!-- Contact Header -->
         <section class="page__header container">
-            <div class="container">
+            <div class="w1200">
                 <h1 class="page__title">{{ site.data.contact-page.title }}</h1>
                 <p class="page__description">{{ site.data.contact-page.description }}</p>
             </div>
