updated site with changes

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@ scripts:
                         <img src="{{ project.images[0].image }}" alt="{{ project.title }}" class="project-item__image">
                         {% else %}
                         <div class="project-item__placeholder">
-                            <span>No image available</span>
+                            <span></span>
                         </div>
                         {% endif %}
                         <div class="project-item__overlay"></div>
